# ggframe

./: .gitattributes  CMakeLists.txt
include/: ggframe.h
src/: ggframe.cc  ggframe.h
